fix: clean up CSS formatting for improved readability and consistency

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@ body {
   margin: 0;
 }
 
+
 /* BEGIN utility classes */
 
 .no-margin-top {
@@ -26,48 +27,21 @@ body {
 }
 
 /* Name compatible with tailwind if needed */
-.w-full {
-  width: 100%;
-}
-.h-full {
-  height: 100%;
-}
-.m-0 {
-  margin: 0;
-}
-.flex-1 {
-  flex: 1;
-}
-.float-right {
-  float: right;
-}
-.rounded-lg {
-  border-radius: 8px;
-} /* also consistent with --ant-border-radius-lg */
-.rounded-xl {
-  border-radius: 12px;
-}
-.rounded-e-none {
-  border-start-end-radius: 0;
-  border-end-end-radius: 0;
-}
-.cursor-pointer {
-  cursor: pointer;
-}
-.select-none {
-  user-select: none;
-}
-.font-mono {
-  font-family: ui-monospace, monospace;
-}
-.text-center {
-  text-align: center;
-}
+.w-full { width: 100%; }
+.h-full { height: 100%; }
+.m-0 { margin: 0; }
+.flex-1 { flex: 1; }
+.float-right { float: right; }
+.rounded-lg { border-radius: 8px; } /* also consistent with --ant-border-radius-lg */
+.rounded-xl { border-radius: 12px; }
+.rounded-e-none { border-start-end-radius: 0; border-end-end-radius: 0; }
+.cursor-pointer { cursor: pointer; }
+.select-none { user-select: none; }
+.font-mono { font-family: ui-monospace, monospace; }
+.text-center { text-align: center; }
 
 /* custom, tailwind-esque */
-.max-w-half-cmw {
-  max-width: calc(var(--content-max-width) / 2);
-}
+.max-w-half-cmw { max-width: calc(var(--content-max-width) / 2); }
 
 .shadow {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -90,10 +64,11 @@ body {
 }
 
 .error-text {
-  color: #f5222d; /* https://ant.design/docs/spec/colors red-6 */
+  color: #f5222d;  /* https://ant.design/docs/spec/colors red-6 */
 }
 
 /* END utility classes */
+
 
 .header-button {
   color: lightgray;
@@ -131,6 +106,7 @@ body {
   color: #91caff;
 }
 
+
 .scoped-title {
   position: sticky;
   top: -3px;
@@ -147,12 +123,11 @@ body {
   padding-left: max(calc((100% - var(--content-max-width)) / 2 + var(--content-padding-h)), var(--content-padding-h));
   padding-right: max(calc((100% - var(--content-max-width)) / 2 + var(--content-padding-h)), var(--content-padding-h));
 
-  background-color: rgba(245, 245, 245, 0.8);
+  background-color: rgba(245, 245, 245, 0.80);
   border-bottom: 1px solid rgba(240, 240, 240, 0); /* invisible border to transition from/to */
   backdrop-filter: blur(10px);
 
-  transition:
-    border-bottom-color 0.5s ease-in-out,
+  transition: border-bottom-color 0.5s ease-in-out,
     margin 0.5s ease-in-out,
     padding 0.5s ease-in-out,
     height 0.5s ease-in-out,
@@ -190,6 +165,7 @@ body {
   line-height: 38px;
 }
 
+
 /* BEGIN react18-json-view styling */
 
 .json-view {
@@ -203,6 +179,7 @@ body {
 }
 
 /* END react18-json-view styling */
+
 
 /* BEGIN layout HTML styling */
 
@@ -259,9 +236,7 @@ body {
   width: calc(100% - var(--sidebar-width));
   overflow: auto;
 
-  transition:
-    left 0.3s,
-    width 0.3s;
+  transition: left 0.3s, width 0.3s;
 }
 
 #content-layout > .ant-layout-content {
@@ -279,6 +254,7 @@ body {
 
 /* END layout HTML styling */
 
+
 /* BEGIN about HTML styling */
 
 /* Elements which are the first child of the about content container shouldn't have the default top margin */
@@ -294,6 +270,7 @@ body {
 
 /* END about HTML styling */
 
+
 /* BEGIN overview */
 
 .count-card {
@@ -306,10 +283,7 @@ body {
 
   display: grid;
   /* 651 * 2 + 18 (gap) = 1320 */
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(250px, calc((var(--content-max-width) - var(--dataset-grid-gap)) / 2))
-  );
+  grid-template-columns: repeat(auto-fit, minmax(250px, calc((var(--content-max-width) - var(--dataset-grid-gap)) / 2)));
   gap: var(--dataset-grid-gap);
 }
 
@@ -322,6 +296,7 @@ body {
 }
 
 /* END overview */
+
 
 /* BEGIN search */
 
@@ -382,12 +357,11 @@ h3.search-sub-form-title:not(.focused) .search-sub-form-title__inner > span.shou
 }
 
 .search-result-statistic.enabled.selected {
-  box-shadow:
-    0 2px 0 rgba(0, 0, 0, 0.02),
-    inset 0 2px 5px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02), inset 0 2px 5px rgba(0, 0, 0, 0.08);
 }
 
 /* END search */
+
 
 @media (min-width: 1050px) and (max-width: 1550px) {
   .dataset-provenance-card-grid {
